Replace JavaFX with Swing